Added implementation of reservations and changed tests
