# src/main/java/de/swtm/fuhrparkmanagement/model/Reservation.java
@@ -1,20 +1,20 @@
 package de.swtm.fuhrparkmanagement.model;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-import jakarta.persistence.*;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.MappedSuperclass;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 
-import java.time.LocalDateTime;
-
+@EqualsAndHashCode(callSuper = true)
 @Data
 @MappedSuperclass
-public class Reservation {
+public class Reservation extends TemporalEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
     private String userId;
-
-    private LocalDateTime createdDate;
 }
